[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Pictures/PanelInfos.png" type="Texture" id=2]
[ext_resource path="res://Fonts/ARCADE_N.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/Score.gd" type="Script" id=4]
[ext_resource path="res://Scripts/AfficheLevel.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Lives.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Pause.gd" type="Script" id=7]
[ext_resource path="res://Pictures/Points/fois1.png" type="Texture" id=8]
[ext_resource path="res://Pictures/Points/fois2.png" type="Texture" id=9]
[ext_resource path="res://Pictures/Points/fois3.png" type="Texture" id=10]
[ext_resource path="res://Pictures/Points/fois4.png" type="Texture" id=11]
[ext_resource path="res://Pictures/Points/fois5.png" type="Texture" id=12]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=13]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 37
font_data = ExtResource( 3 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_vertical_guides_": [  ]
}

[node name="Levels" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
editor/display_folded = true

[node name="Panel" type="Sprite" parent="CanvasLayer"]
position = Vector2( 722.002, 300 )
scale = Vector2( 1.0263, 1 )
texture = ExtResource( 2 )

[node name="Score" type="Label" parent="CanvasLayer"]
margin_left = 657.641
margin_top = 330.0
margin_right = 785.641
margin_bottom = 347.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
script = ExtResource( 4 )

[node name="Level" type="Label" parent="CanvasLayer"]
margin_left = 680.0
margin_top = 426.467
margin_right = 768.0
margin_bottom = 443.467
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
script = ExtResource( 5 )

[node name="Lives" type="Label" parent="CanvasLayer"]
margin_left = 672.0
margin_top = 239.0
margin_right = 773.0
margin_bottom = 257.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
script = ExtResource( 6 )

[node name="GameOverLabel" type="Label" parent="CanvasLayer"]
pause_mode = 2
visible = false
margin_left = 180.0
margin_top = 270.318
margin_right = 504.0
margin_bottom = 308.318
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "GAME OVER"

[node name="Pause" type="Control" parent="CanvasLayer"]
pause_mode = 2
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 7 )

[node name="BlackOverley" type="ColorRect" parent="CanvasLayer/Pause"]
margin_right = 800.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.290196 )

[node name="Bonus" type="Node2D" parent="CanvasLayer"]

[node name="Factor1" type="Sprite" parent="CanvasLayer/Bonus"]
visible = false
position = Vector2( 745, 133 )
texture = ExtResource( 8 )

[node name="Factor2" type="Sprite" parent="CanvasLayer/Bonus"]
visible = false
position = Vector2( 745, 133 )
texture = ExtResource( 9 )

[node name="Factor3" type="Sprite" parent="CanvasLayer/Bonus"]
visible = false
position = Vector2( 745, 133 )
texture = ExtResource( 10 )

[node name="Factor4" type="Sprite" parent="CanvasLayer/Bonus"]
visible = false
position = Vector2( 745, 133 )
texture = ExtResource( 11 )

[node name="Factor5" type="Sprite" parent="CanvasLayer/Bonus"]
visible = false
position = Vector2( 745, 133 )
texture = ExtResource( 12 )

[node name="Aliens" type="Node2D" parent="."]

[node name="Bonus" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource( 13 )]
position = Vector2( 336, 268 )
